Allow to select dbc path instead select only default directory.
(cherry picked from commit 83914cdef47a22232341e12fbbf038fe2e503308)

Conflicts:
	SpellWork/DBC/DBC.cs

--- a/SpellWork/Properties/Settings.settings
+++ b/SpellWork/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="UseDbConnect" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DbcPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">dbc</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
