--- a/SpellWork/app.config
+++ b/SpellWork/app.config
@@ -25,6 +25,9 @@
             <setting name="UseDbConnect" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="DbcPath" serializeAs="String">
+                <value>dbc</value>
+            </setting>
         </SpellWork.Properties.Settings>
     </userSettings>
 </configuration>
