--- a/SpellWorkLib/SpellWorkLib.csproj
+++ b/SpellWorkLib/SpellWorkLib.csproj
@@ -34,10 +34,10 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
@@ -49,8 +49,11 @@
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\RichTextBoxExtensions.cs" />
+    <Compile Include="HTMLSpellInfoWriter.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ISpellInfoWriter.cs" />
+    <Compile Include="RichTextBoxSpellInfoWriter.cs" />
     <Compile Include="Spell\SpellCompare.cs" />
     <Compile Include="Spell\SpellEnums.cs" />
     <Compile Include="Spell\SpellInfo.cs" />
