--- a/SpellWorkWeb/SpellWorkWeb.csproj
+++ b/SpellWorkWeb/SpellWorkWeb.csproj
@@ -63,8 +63,11 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HTMLSpellInfoWriter.cs" />
     <Compile Include="ISpellRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
