--- a/SpellWorkWeb/SpellWorkWeb.csproj
+++ b/SpellWorkWeb/SpellWorkWeb.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="HTMLSpellInfoWriter.cs" />
     <Compile Include="ISpellRepository.cs" />
+    <Compile Include="NancyBootstrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spell.cs" />
