Implemented form for scaling spell value with item level

--- a/SpellWork/SpellWork.csproj
+++ b/SpellWork/SpellWork.csproj
@@ -97,6 +97,7 @@
     <Compile Include="DBC\Structures\ItemEntry.cs" />
     <Compile Include="DBC\Structures\ItemSparseEntry.cs" />
     <Compile Include="DBC\Structures\OverrideSpellDataEntry.cs" />
+    <Compile Include="DBC\Structures\RandPropPointsEntry.cs" />
     <Compile Include="DBC\Structures\ScreenEffectEntry.cs" />
     <Compile Include="DBC\Structures\SkillLineAbilityEntry.cs" />
     <Compile Include="DBC\Structures\SkillLineEntry.cs" />
