--- a/SpellWork/SpellWork.csproj
+++ b/SpellWork/SpellWork.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SpellWork</RootNamespace>
     <AssemblyName>SpellWork</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationIcon>New Icon.ico</ApplicationIcon>
     <SignAssembly>false</SignAssembly>
@@ -45,7 +45,7 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -62,9 +62,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DBFilesClient.NET">
-      <HintPath>.\DBFilesClient.NET.dll</HintPath>
-    </Reference>
     <Reference Include="MySql.Data, Version=6.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>libs\MySql.Data.dll</HintPath>
@@ -73,6 +70,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -91,9 +89,10 @@
     </Compile>
     <Compile Include="Database\Structures.cs" />
     <Compile Include="DBC\DataStoreFileNameAttribute.cs" />
+    <Compile Include="DBC\DB2Ignored.cs" />
+    <Compile Include="DBC\DB2Reader.cs" />
     <Compile Include="DBC\Structures\AreaGroupMemberEntry.cs" />
     <Compile Include="DBC\Structures\AreaTableEntry.cs" />
-    <Compile Include="DBC\Structures\gtSpellScalingEntry.cs" />
     <Compile Include="DBC\Structures\ItemEffectEntry.cs" />
     <Compile Include="DBC\Structures\ItemEntry.cs" />
     <Compile Include="DBC\Structures\ItemSparseEntry.cs" />
@@ -121,10 +120,10 @@
     <Compile Include="DBC\Structures\SpellMissileEntry.cs" />
     <Compile Include="DBC\Structures\SpellMissileMotionEntry.cs" />
     <Compile Include="DBC\Structures\SpellPowerEntry.cs" />
+    <Compile Include="DBC\Structures\SpellProcsPerMinuteEntry.cs" />
     <Compile Include="DBC\Structures\SpellRadiusEntry.cs" />
     <Compile Include="DBC\Structures\SpellRangeEntry.cs" />
     <Compile Include="DBC\Structures\SpellReagentsEntry.cs" />
-    <Compile Include="DBC\Structures\SpellRuneCostEntry.cs" />
     <Compile Include="DBC\Structures\SpellScalingEntry.cs" />
     <Compile Include="DBC\Structures\SpellShapeshiftEntry.cs" />
     <Compile Include="DBC\Structures\SpellTargetRestrictionsEntry.cs" />
@@ -133,12 +132,6 @@
     <Compile Include="DBC\Structures\SpellXSpellVisualEntry.cs" />
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\TreeViewExtensions.cs" />
-    <Compile Include="Forms\FormAboutBox.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\FormAboutBox.Designer.cs">
-      <DependentUpon>FormAboutBox.cs</DependentUpon>
-    </Compile>
     <Compile Include="DBC\DBC.cs" />
     <Compile Include="Forms\FormCalculateFlags.cs">
       <SubType>Form</SubType>
@@ -164,6 +157,8 @@
     <Compile Include="Forms\FormSpellScaling.Designer.cs">
       <DependentUpon>FormSpellScaling.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameTables\GameTables.cs" />
+    <Compile Include="GameTables\Structures\GtSpellScalingEntry.cs" />
     <Compile Include="Spell\ProcInfo.cs">
     </Compile>
     <Compile Include="Extensions\RichTextBoxExtensions.cs" />
@@ -180,9 +175,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spell\SpellInfoHelper.cs" />
-    <EmbeddedResource Include="Forms\FormAboutBox.resx">
-      <DependentUpon>FormAboutBox.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="Spell\SpellInfoLoadData.cs" />
     <EmbeddedResource Include="Forms\FormCalculateFlags.resx">
       <DependentUpon>FormCalculateFlags.cs</DependentUpon>
     </EmbeddedResource>
@@ -258,7 +251,6 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
