--- a/SpellWork/app.config
+++ b/SpellWork/app.config
@@ -28,6 +28,9 @@
             <setting name="DbcPath" serializeAs="String">
                 <value>dbc</value>
             </setting>
+            <setting name="GtPath" serializeAs="String">
+                <value>gt</value>
+            </setting>
         </SpellWork.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
