Added support for Locale setting

--- a/SpellWork/app.config
+++ b/SpellWork/app.config
@@ -31,6 +31,9 @@
             <setting name="GtPath" serializeAs="String">
                 <value>gt</value>
             </setting>
+          <setting name="Locale" serializeAs="String">
+            <value>enUS</value>
+          </setting>
         </SpellWork.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
