--- a/SpellWork/SpellWork.csproj
+++ b/SpellWork/SpellWork.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SpellWork</RootNamespace>
     <AssemblyName>SpellWork</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationIcon>New Icon.ico</ApplicationIcon>
     <SignAssembly>false</SignAssembly>
@@ -61,13 +61,14 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DBFilesClient.NET, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DBFilesClient.NET.1.1.4\lib\net452\DBFilesClient.NET.dll</HintPath>
+    <Reference Include="DBFileReaderLib">
+      <HintPath>..\packages\DBFileReaderLib.1.0.0.0\lib\DBFileReaderLib.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -77,6 +78,9 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -87,6 +91,10 @@
     <Compile Include="Database\Structures.cs" />
     <Compile Include="DBC\Structures\AreaGroupMemberEntry.cs" />
     <Compile Include="DBC\Structures\AreaTableEntry.cs" />
+    <Compile Include="DBC\Structures\ContentTuningEntry.cs" />
+    <Compile Include="DBC\Structures\ContentTuningXExpectedEntry.cs" />
+    <Compile Include="DBC\Structures\ExpectedStatEntry.cs" />
+    <Compile Include="DBC\Structures\ExpectedStatModEntry.cs" />
     <Compile Include="DBC\Structures\ItemEffectEntry.cs" />
     <Compile Include="DBC\Structures\ItemEntry.cs" />
     <Compile Include="DBC\Structures\ItemSparseEntry.cs" />
@@ -102,17 +110,17 @@
     <Compile Include="DBC\Structures\SpellCategoriesEntry.cs" />
     <Compile Include="DBC\Structures\SpellClassOptionsEntry.cs" />
     <Compile Include="DBC\Structures\SpellCooldownsEntry.cs" />
+    <Compile Include="DBC\Structures\SpellXDescriptionVariables.cs" />
     <Compile Include="DBC\Structures\SpellDescriptionVariablesEntry.cs" />
     <Compile Include="DBC\Structures\SpellDurationEntry.cs" />
     <Compile Include="DBC\Structures\SpellEffectEntry.cs" />
-    <Compile Include="DBC\Structures\SpellEffectScalingEntry.cs" />
     <Compile Include="DBC\Structures\SpellEntry.cs" />
     <Compile Include="DBC\Structures\SpellEquippedItemsEntry.cs" />
     <Compile Include="DBC\Structures\SpellInterruptsEntry.cs" />
     <Compile Include="DBC\Structures\SpellLevelsEntry.cs" />
     <Compile Include="DBC\Structures\SpellMiscEntry.cs" />
     <Compile Include="DBC\Structures\SpellMissileEntry.cs" />
-    <Compile Include="DBC\Structures\SpellMissileMotionEntry.cs" />
+    <Compile Include="DBC\Structures\SpellNameEntry.cs" />
     <Compile Include="DBC\Structures\SpellPowerEntry.cs" />
     <Compile Include="DBC\Structures\SpellProcsPerMinuteEntry.cs" />
     <Compile Include="DBC\Structures\SpellRadiusEntry.cs" />
@@ -123,7 +131,6 @@
     <Compile Include="DBC\Structures\SpellShapeshiftEntry.cs" />
     <Compile Include="DBC\Structures\SpellTargetRestrictionsEntry.cs" />
     <Compile Include="DBC\Structures\SpellTotemsEntry.cs" />
-    <Compile Include="DBC\Structures\SpellVisualEntry.cs" />
     <Compile Include="DBC\Structures\SpellXSpellVisualEntry.cs" />
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\TreeViewExtensions.cs" />
@@ -154,6 +161,8 @@
     </Compile>
     <Compile Include="GameTables\GameTables.cs" />
     <Compile Include="GameTables\Structures\GtSpellScalingEntry.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="Spell\ExpectedStat.cs" />
     <Compile Include="Spell\ProcInfo.cs">
     </Compile>
     <Compile Include="Extensions\RichTextBoxExtensions.cs" />
@@ -199,7 +208,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -244,6 +252,11 @@
       <ProductName>Установщик Windows 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MySql.Data">
+      <Version>6.9.9</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
