--- a/SpellWork/app.config
+++ b/SpellWork/app.config
@@ -28,17 +28,26 @@
             <setting name="DbcPath" serializeAs="String">
                 <value>dbc</value>
             </setting>
+            <setting name="HotfixCachePath" serializeAs="String">
+                <value>DBCache.bin</value>
+            </setting>
             <setting name="GtPath" serializeAs="String">
                 <value>gt</value>
             </setting>
-          <setting name="Locale" serializeAs="String">
-            <value>enUS</value>
-          </setting>
+            <setting name="Locale" serializeAs="String">
+                <value>enUS</value>
+            </setting>
         </SpellWork.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" /></startup><system.data>
-    <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-    </DbProviderFactories>
-  </system.data></configuration>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+    </startup>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
+</configuration>
