Optimize advanced spell searching

--- a/SpellWork/SpellWork.csproj
+++ b/SpellWork/SpellWork.csproj
@@ -132,9 +132,9 @@
     <Compile Include="DBC\Structures\SpellTargetRestrictionsEntry.cs" />
     <Compile Include="DBC\Structures\SpellTotemsEntry.cs" />
     <Compile Include="DBC\Structures\SpellXSpellVisualEntry.cs" />
-    <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\TreeViewExtensions.cs" />
     <Compile Include="DBC\DBC.cs" />
+    <Compile Include="Filtering\FilterFactory.cs" />
     <Compile Include="Forms\FormCalculateFlags.cs">
       <SubType>Form</SubType>
     </Compile>
