Print spells affected by other spells with spell label too, not just classmask

--- a/SpellWork/SpellWork.csproj
+++ b/SpellWork/SpellWork.csproj
@@ -110,6 +110,7 @@
     <Compile Include="DBC\Structures\SpellCategoriesEntry.cs" />
     <Compile Include="DBC\Structures\SpellClassOptionsEntry.cs" />
     <Compile Include="DBC\Structures\SpellCooldownsEntry.cs" />
+    <Compile Include="DBC\Structures\SpellLabelEntry.cs" />
     <Compile Include="DBC\Structures\SpellXDescriptionVariables.cs" />
     <Compile Include="DBC\Structures\SpellDescriptionVariablesEntry.cs" />
     <Compile Include="DBC\Structures\SpellDurationEntry.cs" />
